telemetry/derive/tests/ui_fail/not_return_result.stderr
error: Should return `Result`. Found RESULT
 --> tests/ui_fail/not_return_result.rs:4:50
  |
4 | fn execute(_wsv: &WorldStateView) -> iroha_core::RESULT {
  |                                                  ^^^^^^
